--- a/inspect-nnunet-predictions.ipynb
+++ b/inspect-nnunet-predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 256,
    "id": "f8e57a45-e7a3-44ca-8ad6-a3346c091fcb",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy.stats import spearmanr\n",
-    "import pickle"
+    "import pickle\n",
+    "import seg_metrics.seg_metrics as sg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 257,
    "id": "9cc19882-5230-4c84-bb87-958907f1f94e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 258,
    "id": "924542f1-56e1-4939-85b8-0dca5f61be62",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 259,
    "id": "d3f44379-b101-4790-a3cb-a0f01ba3902b",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 260,
    "id": "f920c556-e99c-4baa-bbf4-94529c2986e5",
    "metadata": {},
    "outputs": [],
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 261,
    "id": "47cd9d03-5368-4923-8478-2673fbd03424",
    "metadata": {},
    "outputs": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 262,
    "id": "c15572f6-caeb-4a93-b00d-a24423597f0f",
    "metadata": {},
    "outputs": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 263,
    "id": "ac186726-3511-4474-82c5-f4b03c36fbf1",
    "metadata": {},
    "outputs": [],
@@ -113,31 +114,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 264,
    "id": "3c2584f0-f3d1-4875-9051-75de14ddb699",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.49"
-      ]
-     },
-     "execution_count": 438,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spearman\n",
+      "0.49\n"
+     ]
     }
    ],
    "source": [
     "foreground_idxs = gt > 0\n",
     "\n",
     "sp = spearmanr(seg[foreground_idxs], gt[foreground_idxs])\n",
-    "np.round(sp[0],2)"
+    "print('Spearman')\n",
+    "print(np.round(sp[0],2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 265,
    "id": "ef92f405-7f12-496c-b55d-2ed6a71f0ea5",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 266,
    "id": "e853c418-f36f-48a9-8c1c-ffbe2b79087c",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 267,
    "id": "862f7ecc-84e5-48a8-8a9b-bddd1e19c854",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 268,
    "id": "5864848a-5436-4b5d-abb1-65cf135ced35",
    "metadata": {},
    "outputs": [
@@ -189,6 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "DSC\n",
       "high: 0.58\n",
       "medium: 0.46\n",
       "low: 0.36\n"
@@ -197,6 +198,7 @@
    ],
    "source": [
     "dsc = {}\n",
+    "print('DSC')\n",
     "for idx,label in enumerate(['high','medium','low']):\n",
     "    k = idx+1\n",
     "    dice = np.sum(seg[gt==k]==k)*2.0 / (np.sum(seg[seg==k]==k) + np.sum(gt[gt==k]==k))\n",
@@ -205,16 +207,65 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f2dce4c2-1430-483e-bf43-f885702986d9",
+   "cell_type": "code",
+   "execution_count": 269,
+   "id": "c93c2262-8310-49bc-9435-25bb6d0cb8b7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:05,  5.38s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "#### write the results to an aggregation file"
+    "labels = [0, 1, 2, 3]\n",
+    "\n",
+    "metrics = sg.write_metrics(labels=labels,\n",
+    "                  gdth_img=label_img,\n",
+    "                  pred_img=prediction_img,\n",
+    "                  csv_file=None,\n",
+    "                  metrics=['vs'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 270,
+   "id": "afb3bbfb-45fc-41e3-ac37-1d90b18f34c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "volume similarity\n",
+      "high: -0.17\n",
+      "medium: -0.36\n",
+      "low: 0.07\n"
+     ]
+    }
+   ],
+   "source": [
+    "vs = metrics[0]['vs']\n",
+    "print('volume similarity')\n",
+    "print('high: {}'.format(round(vs[1],2)))\n",
+    "print('medium: {}'.format(round(vs[2],2)))\n",
+    "print('low: {}'.format(round(vs[3],2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2dce4c2-1430-483e-bf43-f885702986d9",
+   "metadata": {},
+   "source": [
+    "#### calculate the mean performance over all training sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
    "id": "ad68aa06-b92d-4904-bf35-2ba7d9e68527",
    "metadata": {},
    "outputs": [],
@@ -224,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 272,
    "id": "71345cd4-616c-4147-bcde-c86cfd209dcb",
    "metadata": {},
    "outputs": [],
@@ -233,7 +284,11 @@
     "    os.makedirs(ANALYSIS_DIR)\n",
     "    \n",
     "ANALYSIS_FILE = '{}/nnunet-metrics.pkl'.format(ANALYSIS_DIR)\n",
-    "patient_d = {'dataset_id':DATASET_ID, 'test_id':TEST_ID, 'confusion_matrix':cm, 'spearman_correlation':np.round(sp[0],2), 'DSC_low':np.round(dsc['low'],2), 'DSC_medium':np.round(dsc['medium'],2), 'DSC_high':np.round(dsc['high'],2)}\n",
+    "patient_d = {'dataset_id':DATASET_ID, 'test_id':TEST_ID, \n",
+    "             'confusion_matrix':cm, 'spearman_correlation':np.round(sp[0],2), \n",
+    "             'DSC_low':np.round(dsc['low'],2), 'DSC_medium':np.round(dsc['medium'],2), 'DSC_high':np.round(dsc['high'],2),\n",
+    "             'VS_low':np.round(vs[3],2), 'VS_medium':np.round(vs[2],2), 'VS_high':np.round(vs[1],2),\n",
+    "            }\n",
     "\n",
     "if os.path.isfile(ANALYSIS_FILE):\n",
     "    with open(ANALYSIS_FILE, 'rb') as f:\n",
@@ -250,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 273,
    "id": "7d436b38-2a6b-42f1-969d-f7bf9baca064",
    "metadata": {},
    "outputs": [
@@ -258,23 +313,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spearman mean 0.44, std 0.07\n",
-      "DSC high-functioning lung mean 0.57, std 0.05\n",
-      "DSC medium-functioning lung mean 0.48, std 0.05\n",
-      "DSC low-functioning lung mean 0.48, std 0.06\n"
+      "Spearman correlation\n",
+      "mean 0.44, std 0.07\n",
+      "\n",
+      "DSC\n",
+      "high 0.57, std 0.05\n",
+      "medium 0.48, std 0.05\n",
+      "low 0.48, std 0.06\n",
+      "\n",
+      "volume similarity\n",
+      "high 0.08, std 0.21\n",
+      "medium -0.15, std 0.16\n",
+      "low -0.06, std 0.13\n"
      ]
     }
    ],
    "source": [
-    "print('Spearman mean {}, std {}'.format(round(np.mean([value['spearman_correlation'] for key, value in analysis_d.items()]) ,2), round(np.std([value['spearman_correlation'] for key, value in analysis_d.items()]), 2)))\n",
-    "print('DSC high-functioning lung mean {}, std {}'.format(round(np.mean([value['DSC_high'] for key, value in analysis_d.items()]) ,2), round(np.std([value['DSC_high'] for key, value in analysis_d.items()]), 2)))\n",
-    "print('DSC medium-functioning lung mean {}, std {}'.format(round(np.mean([value['DSC_medium'] for key, value in analysis_d.items()]) ,2), round(np.std([value['DSC_medium'] for key, value in analysis_d.items()]), 2)))\n",
-    "print('DSC low-functioning lung mean {}, std {}'.format(round(np.mean([value['DSC_low'] for key, value in analysis_d.items()]) ,2), round(np.std([value['DSC_low'] for key, value in analysis_d.items()]), 2)))\n"
+    "print('Spearman correlation')\n",
+    "print('mean {}, std {}'.format(round(np.mean([value['spearman_correlation'] for key, value in analysis_d.items()]) ,2), round(np.std([value['spearman_correlation'] for key, value in analysis_d.items()]), 2)))\n",
+    "print()\n",
+    "print('DSC')\n",
+    "print('high {}, std {}'.format(round(np.mean([value['DSC_high'] for key, value in analysis_d.items()]) ,2), round(np.std([value['DSC_high'] for key, value in analysis_d.items()]), 2)))\n",
+    "print('medium {}, std {}'.format(round(np.mean([value['DSC_medium'] for key, value in analysis_d.items()]) ,2), round(np.std([value['DSC_medium'] for key, value in analysis_d.items()]), 2)))\n",
+    "print('low {}, std {}'.format(round(np.mean([value['DSC_low'] for key, value in analysis_d.items()]) ,2), round(np.std([value['DSC_low'] for key, value in analysis_d.items()]), 2)))\n",
+    "print()\n",
+    "print('volume similarity')\n",
+    "print('high {}, std {}'.format(round(np.mean([value['VS_high'] for key, value in analysis_d.items()]) ,2), round(np.std([value['VS_high'] for key, value in analysis_d.items()]), 2)))\n",
+    "print('medium {}, std {}'.format(round(np.mean([value['VS_medium'] for key, value in analysis_d.items()]) ,2), round(np.std([value['VS_medium'] for key, value in analysis_d.items()]), 2)))\n",
+    "print('low {}, std {}'.format(round(np.mean([value['VS_low'] for key, value in analysis_d.items()]) ,2), round(np.std([value['VS_low'] for key, value in analysis_d.items()]), 2)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 274,
    "id": "900b4503-1b1b-478e-a691-0f473904c3d0",
    "metadata": {},
    "outputs": [],
@@ -284,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 275,
    "id": "fbcddcd3-4faf-47ba-ba0c-698a4d750f8d",
    "metadata": {},
    "outputs": [
@@ -307,128 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
-   "id": "3ac97b11-c800-4d5c-b7a1-e848275e10c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'144-01': {'dataset_id': 144,\n",
-       "  'test_id': 1,\n",
-       "  'confusion_matrix': array([[9.50824572e-01, 7.37768255e-03, 1.79165050e-02, 2.38812401e-02],\n",
-       "         [1.24632125e-04, 6.30230248e-01, 2.82664895e-01, 8.69802248e-02],\n",
-       "         [3.24005418e-04, 3.15403504e-01, 5.65983560e-01, 1.18288930e-01],\n",
-       "         [8.38781847e-04, 3.25052816e-02, 6.18648636e-01, 3.48007301e-01]]),\n",
-       "  'spearman_correlation': 0.49,\n",
-       "  'DSC_low': 0.36,\n",
-       "  'DSC_medium': 0.46,\n",
-       "  'DSC_high': 0.58},\n",
-       " '140-00': {'dataset_id': 140,\n",
-       "  'test_id': 0,\n",
-       "  'confusion_matrix': array([[9.87527164e-01, 5.94801505e-05, 7.34106034e-03, 5.07229585e-03],\n",
-       "         [2.54717578e-02, 6.10222797e-01, 2.22916926e-01, 1.41388519e-01],\n",
-       "         [9.38844570e-03, 2.69616745e-01, 5.16704436e-01, 2.04290373e-01],\n",
-       "         [1.89580813e-02, 5.02401405e-02, 5.46177913e-01, 3.84623865e-01]]),\n",
-       "  'spearman_correlation': 0.42,\n",
-       "  'DSC_low': 0.4,\n",
-       "  'DSC_medium': 0.47,\n",
-       "  'DSC_high': 0.6},\n",
-       " '140-01': {'dataset_id': 140,\n",
-       "  'test_id': 1,\n",
-       "  'confusion_matrix': array([[9.95508710e-01, 3.60017652e-04, 9.64095507e-04, 3.16717712e-03],\n",
-       "         [1.36385155e-03, 5.59605678e-01, 3.30070414e-01, 1.08960056e-01],\n",
-       "         [1.34024904e-03, 2.20803864e-01, 5.27927204e-01, 2.49928683e-01],\n",
-       "         [1.75439669e-03, 1.43491039e-01, 4.32649981e-01, 4.22104583e-01]]),\n",
-       "  'spearman_correlation': 0.38,\n",
-       "  'DSC_low': 0.44,\n",
-       "  'DSC_medium': 0.5,\n",
-       "  'DSC_high': 0.56},\n",
-       " '141-00': {'dataset_id': 141,\n",
-       "  'test_id': 0,\n",
-       "  'confusion_matrix': array([[9.97236294e-01, 6.59966391e-05, 3.59143117e-04, 2.33856621e-03],\n",
-       "         [1.09098624e-03, 4.62833189e-01, 3.78656352e-01, 1.57419474e-01],\n",
-       "         [1.90631365e-03, 2.02733520e-01, 4.70422575e-01, 3.24937590e-01],\n",
-       "         [3.29173973e-02, 5.48656797e-02, 4.47731628e-01, 4.64485295e-01]]),\n",
-       "  'spearman_correlation': 0.34,\n",
-       "  'DSC_low': 0.45,\n",
-       "  'DSC_medium': 0.45,\n",
-       "  'DSC_high': 0.52},\n",
-       " '141-01': {'dataset_id': 141,\n",
-       "  'test_id': 1,\n",
-       "  'confusion_matrix': array([[9.73121107e-01, 2.24874503e-04, 2.30002372e-03, 2.43539946e-02],\n",
-       "         [8.86849334e-04, 6.93507995e-01, 2.75876359e-01, 2.97287967e-02],\n",
-       "         [1.13608971e-03, 2.96599766e-01, 5.82358134e-01, 1.19906010e-01],\n",
-       "         [2.90904654e-03, 3.79425973e-02, 4.68212901e-01, 4.90935456e-01]]),\n",
-       "  'spearman_correlation': 0.6,\n",
-       "  'DSC_low': 0.49,\n",
-       "  'DSC_medium': 0.54,\n",
-       "  'DSC_high': 0.65},\n",
-       " '142-00': {'dataset_id': 142,\n",
-       "  'test_id': 0,\n",
-       "  'confusion_matrix': array([[9.88798188e-01, 2.78037994e-05, 4.27812813e-04, 1.07461954e-02],\n",
-       "         [2.01578030e-03, 5.64088065e-01, 3.31696759e-01, 1.02199396e-01],\n",
-       "         [2.81693811e-02, 1.29024979e-01, 4.62904577e-01, 3.79901063e-01],\n",
-       "         [3.35867288e-02, 6.35639764e-02, 3.28779163e-01, 5.74070132e-01]]),\n",
-       "  'spearman_correlation': 0.45,\n",
-       "  'DSC_low': 0.49,\n",
-       "  'DSC_medium': 0.47,\n",
-       "  'DSC_high': 0.63},\n",
-       " '142-01': {'dataset_id': 142,\n",
-       "  'test_id': 1,\n",
-       "  'confusion_matrix': array([[9.97119466e-01, 1.42921314e-05, 7.26163098e-04, 2.14007919e-03],\n",
-       "         [2.47815086e-04, 4.75103893e-01, 4.54527537e-01, 7.01207553e-02],\n",
-       "         [4.28506081e-02, 6.13067093e-02, 5.17665469e-01, 3.78177213e-01],\n",
-       "         [6.36287704e-02, 9.38808292e-03, 2.77500252e-01, 6.49482895e-01]]),\n",
-       "  'spearman_correlation': 0.49,\n",
-       "  'DSC_low': 0.58,\n",
-       "  'DSC_medium': 0.5,\n",
-       "  'DSC_high': 0.61},\n",
-       " '143-00': {'dataset_id': 143,\n",
-       "  'test_id': 0,\n",
-       "  'confusion_matrix': array([[0.92965751, 0.01486467, 0.03979008, 0.01568773],\n",
-       "         [0.00140684, 0.49830999, 0.4028243 , 0.09745887],\n",
-       "         [0.00617211, 0.28415807, 0.52525654, 0.18441328],\n",
-       "         [0.01313492, 0.03302607, 0.4031402 , 0.55069882]]),\n",
-       "  'spearman_correlation': 0.47,\n",
-       "  'DSC_low': 0.5,\n",
-       "  'DSC_medium': 0.39,\n",
-       "  'DSC_high': 0.46},\n",
-       " '143-01': {'dataset_id': 143,\n",
-       "  'test_id': 1,\n",
-       "  'confusion_matrix': array([[9.92078292e-01, 2.09478548e-04, 5.18739408e-04, 7.19349012e-03],\n",
-       "         [2.09210420e-02, 4.92681236e-01, 4.51520316e-01, 3.48774055e-02],\n",
-       "         [2.76686736e-02, 2.20076710e-01, 4.24693350e-01, 3.27561267e-01],\n",
-       "         [6.76339991e-02, 9.53614106e-02, 3.02524431e-01, 5.34480159e-01]]),\n",
-       "  'spearman_correlation': 0.4,\n",
-       "  'DSC_low': 0.51,\n",
-       "  'DSC_medium': 0.43,\n",
-       "  'DSC_high': 0.52},\n",
-       " '144-00': {'dataset_id': 144,\n",
-       "  'test_id': 0,\n",
-       "  'confusion_matrix': array([[9.98476889e-01, 1.28434413e-05, 5.50649906e-05, 1.45520235e-03],\n",
-       "         [1.03284776e-03, 5.08389509e-01, 4.03919612e-01, 8.66580312e-02],\n",
-       "         [6.92739831e-04, 1.39668221e-01, 5.99178630e-01, 2.60460409e-01],\n",
-       "         [3.94085018e-02, 1.49993338e-01, 2.67780059e-01, 5.42818102e-01]]),\n",
-       "  'spearman_correlation': 0.39,\n",
-       "  'DSC_low': 0.54,\n",
-       "  'DSC_medium': 0.57,\n",
-       "  'DSC_high': 0.55}}"
-      ]
-     },
-     "execution_count": 448,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "analysis_d"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "2df4f2df-de7e-4ee9-8de6-db1d1fbac071",
+   "id": "a6f59021-d311-4b8e-98a3-4b808d607b3d",
    "metadata": {},
    "outputs": [],
    "source": []
