--- a/compare ventilation maps.ipynb
+++ b/compare ventilation maps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import glob\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "from scipy.stats import spearmanr\n",
-    "import seg_metrics.seg_metrics as sg"
+    "import seg_metrics.seg_metrics as sg\n",
+    "import pickle"
    ]
   },
   {
@@ -47,11 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = 9"
+    "patient_id = 1"
    ]
   },
   {
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -465,6 +466,97 @@
     "print('medium: {}'.format(round(hd95[2])))\n",
     "print('low: {}'.format(round(hd95[3])))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### store the metrics by dataset and test patient ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ANALYSIS_DIR = '/home/daryl/analysis-dir'\n",
+    "ANALYSIS_FILE = '{}/dir-metrics.pkl'.format(ANALYSIS_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(ANALYSIS_DIR):\n",
+    "    os.makedirs(ANALYSIS_DIR)\n",
+    "\n",
+    "patient_d = {'patient_id':patient_id,\n",
+    "             'confusion_matrix':cm, 'spearman_correlation':np.round(sp[0],2), \n",
+    "             'DSC_low':np.round(dsc['low'],2), 'DSC_medium':np.round(dsc['medium'],2), 'DSC_high':np.round(dsc['high'],2),\n",
+    "             'VS_low':np.round(vs[3],2), 'VS_medium':np.round(vs[2],2), 'VS_high':np.round(vs[1],2),\n",
+    "             'HD_low':np.round(hd[3]), 'HD_medium':np.round(hd[2]), 'HD_high':np.round(hd[1]),\n",
+    "             'HD95_low':np.round(hd95[3]), 'HD95_medium':np.round(hd95[2]), 'HD95_high':np.round(hd95[1]),\n",
+    "            }\n",
+    "\n",
+    "if os.path.isfile(ANALYSIS_FILE):\n",
+    "    with open(ANALYSIS_FILE, 'rb') as f:\n",
+    "        analysis_d = pickle.load(f)\n",
+    "else:\n",
+    "    analysis_d = {}\n",
+    "\n",
+    "patient_id_str = '{:03d}'.format(patient_id)\n",
+    "analysis_d[patient_id_str] = patient_d\n",
+    "\n",
+    "with open(ANALYSIS_FILE, 'wb') as f:\n",
+    "        pickle.dump(analysis_d, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'009': {'patient_id': 9,\n",
+       "  'confusion_matrix': array([[9.95625595e-01, 1.95670810e-03, 1.41715703e-03, 1.00053971e-03],\n",
+       "         [0.00000000e+00, 1.32804011e-01, 4.57624622e-01, 4.09571367e-01],\n",
+       "         [0.00000000e+00, 3.41875357e-01, 3.92583774e-01, 2.65540869e-01],\n",
+       "         [9.60571425e-07, 4.07774097e-01, 3.54862941e-01, 2.37362002e-01]]),\n",
+       "  'spearman_correlation': -0.22,\n",
+       "  'DSC_low': 0.23,\n",
+       "  'DSC_medium': 0.39,\n",
+       "  'DSC_high': 0.13,\n",
+       "  'VS_low': 0.07,\n",
+       "  'VS_medium': 0.0,\n",
+       "  'VS_high': 0.0,\n",
+       "  'HD_low': 55.0,\n",
+       "  'HD_medium': 66.0,\n",
+       "  'HD_high': 80.0,\n",
+       "  'HD95_low': 30.0,\n",
+       "  'HD95_medium': 20.0,\n",
+       "  'HD95_high': 53.0}}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
