--- a/CTVI paper figures.ipynb
+++ b/CTVI paper figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "ad5d4ae5-b753-43ca-a389-4dd70e8d9b4f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "c65e06e0-f32b-4538-8c2d-2e36c76367fa",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "4fc9bdb8-80f1-4916-bc57-5167aaf1b724",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded 20 metrics: ['001', '002', '003', '004', '005', '006', '007', '008', '009', '010', '011', '012', '013', '014', '015', '016', '017', '018', '019', '020']\n"
+      "loaded 10 metrics: ['140-00', '140-01', '141-00', '141-01', '142-00', '142-01', '143-00', '143-01', '144-00', '144-01']\n"
      ]
     }
    ],
