--- a/compare ventilation maps.ipynb
+++ b/compare ventilation maps.ipynb
@@ -53,7 +53,15 @@
   {
    "cell_type": "code",
    "execution_count": 686,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "patient_id = 18"
@@ -714,10 +722,10 @@
     "\n",
     "plt.margins(0.06)\n",
     "\n",
-    "red_circle = dict(markerfacecolor='red', marker='o')\n",
+    "red_circle = dict(markerfacecolor='red', marker='o', markeredgecolor='lightgrey')\n",
     "mean_shape = dict(markerfacecolor='green', marker='D', markeredgecolor='green')\n",
     "\n",
-    "bp = ax1.boxplot(spearman, showfliers=True, showmeans=True, meanprops=mean_shape)\n",
+    "bp = ax1.boxplot(spearman, showfliers=True, showmeans=True, meanprops=mean_shape, flierprops=red_circle)\n",
     "\n",
     "# ax1.set_xticklabels(['high', 'medium', 'low'])\n",
     "# plt.xlabel('lung function')\n",
