--- a/compare patient nnunet predictions with quantised PET and CTVI-DIR.ipynb
+++ b/compare patient nnunet predictions with quantised PET and CTVI-DIR.ipynb
@@ -356,32 +356,76 @@
     "                  gdth_img=label_img,\n",
     "                  pred_img=prediction_img,\n",
     "                  csv_file=None,\n",
-    "                  metrics=['vs','hd','hd95'])\n",
+    "                  metrics=['msd','hd95','dice'])\n",
     "\n",
     "nnunet_hd95 = {}\n",
     "nnunet_hd95['high'] = nnunet_metrics[0]['hd95'][0]\n",
     "nnunet_hd95['medium'] = nnunet_metrics[0]['hd95'][1]\n",
-    "nnunet_hd95['low'] = nnunet_metrics[0]['hd95'][2]"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "8c0b87af-612f-47a6-b8b4-f861e76eed40",
-   "metadata": {},
-   "source": [
-    "from skimage.metrics import hausdorff_distance\n",
+    "nnunet_hd95['low'] = nnunet_metrics[0]['hd95'][2]\n",
     "\n",
-    "nnunet_hd95 = {}\n",
+    "nnunet_msd = {}\n",
+    "nnunet_msd['high'] = nnunet_metrics[0]['msd'][0]\n",
+    "nnunet_msd['medium'] = nnunet_metrics[0]['msd'][1]\n",
+    "nnunet_msd['low'] = nnunet_metrics[0]['msd'][2]\n",
     "\n",
-    "nnunet_hd95['high'] = hausdorff_distance(np.where((label_img==1), True , False), np.where((prediction_img==1), True , False))\n",
-    "nnunet_hd95['medium'] = hausdorff_distance(np.where((label_img==2), True , False), np.where((prediction_img==2), True , False))\n",
-    "nnunet_hd95['low'] = hausdorff_distance(np.where((label_img==3), True , False), np.where((prediction_img==3), True , False))"
+    "nnunet_dice = {}\n",
+    "nnunet_dice['high'] = nnunet_metrics[0]['dice'][0]\n",
+    "nnunet_dice['medium'] = nnunet_metrics[0]['dice'][1]\n",
+    "nnunet_dice['low'] = nnunet_metrics[0]['dice'][2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "id": "8fc2a333-6028-489c-ab8a-262ba16ca1a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean surface distance (MSD)\n",
+      "high: 11\n",
+      "medium: 5\n",
+      "low: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Mean surface distance (MSD)')\n",
+    "print('high: {}'.format(round(nnunet_msd['high'])))\n",
+    "print('medium: {}'.format(round(nnunet_msd['medium'])))\n",
+    "print('low: {}'.format(round(nnunet_msd['low'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0e94880f-bd25-4f06-81cb-56f9bc7bde99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dice\n",
+      "high: 0.7\n",
+      "medium: 0.65\n",
+      "low: 0.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dice')\n",
+    "print('high: {}'.format(round(nnunet_dice['high'], 2)))\n",
+    "print('medium: {}'.format(round(nnunet_dice['medium'], 2)))\n",
+    "print('low: {}'.format(round(nnunet_dice['low'], 2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cf8f2e5e-0aba-4276-8cd2-c88d7ae617d6",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "91dbadfc-02d4-49a5-8570-6b105dc0d519",
    "metadata": {},
    "outputs": [],
@@ -426,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "f76d8217-95cd-49d5-bcf1-7c73e774d767",
    "metadata": {},
    "outputs": [
@@ -436,7 +480,7 @@
        "4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "a6f59021-d311-4b8e-98a3-4b808d607b3d",
    "metadata": {},
    "outputs": [],
@@ -459,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "ced6e00b-14de-485f-8587-5284f708646f",
    "metadata": {},
    "outputs": [
@@ -469,7 +513,7 @@
        "(300, 320, 320)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "d00158de-43ef-4f7f-875d-b8409531b13b",
    "metadata": {},
    "outputs": [
@@ -491,7 +535,7 @@
        "(300, 320, 320)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "6e078b0b-51ed-42f2-ba35-b826783e5d2b",
    "metadata": {},
    "outputs": [],
@@ -515,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "31ac00b2-486a-41f9-a5b3-bdd6ed4b1b40",
    "metadata": {},
    "outputs": [
@@ -568,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "cf93ee7f-e2fa-40b6-b85c-b2f70c76287a",
    "metadata": {},
    "outputs": [
@@ -578,7 +622,7 @@
        "((300, 320, 320), (320, 320, 300))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "105c1b97-4b8d-4124-8c50-ef292385985b",
    "metadata": {},
    "outputs": [],
@@ -600,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "fea38f9f-9665-4a6e-bc73-33045d4264e2",
    "metadata": {},
    "outputs": [],
@@ -611,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "5b661ef7-0488-4081-bb0c-3f23a825fa23",
    "metadata": {},
    "outputs": [],
@@ -623,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "24b74656-5e04-4194-a4c1-9684a3881764",
    "metadata": {},
    "outputs": [
@@ -669,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "275f8e13-5eae-46ef-8e34-a559987f2e32",
    "metadata": {},
    "outputs": [
@@ -716,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "85fd6b97-63bb-41d3-b857-c670002248c4",
    "metadata": {},
    "outputs": [
@@ -726,7 +770,7 @@
        "((300, 320, 320), (320, 320, 300))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "372df8e6-d2ee-4ac6-a3cf-fd61903894bd",
    "metadata": {},
    "outputs": [],
@@ -748,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "93c5f226-2627-43ff-aff6-bde04b155dd8",
    "metadata": {},
    "outputs": [],
@@ -759,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "3d49c8a1-dcd6-46fb-a281-fc77628ba2e7",
    "metadata": {},
    "outputs": [],
@@ -771,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "6a791257-a114-4945-a4f2-692722720a8c",
    "metadata": {},
    "outputs": [
@@ -817,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "3a74f8c0-efcc-4c83-a996-97a2d66cd524",
    "metadata": {},
    "outputs": [
@@ -844,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "bd6fae68-d60f-4c44-98d5-09a59af1090a",
    "metadata": {},
    "outputs": [],
@@ -855,29 +899,27 @@
     "                  gdth_img=label_img,\n",
     "                  pred_img=ctvi_jac_label_arr,\n",
     "                  csv_file=None,\n",
-    "                  metrics=['vs','hd','hd95'])\n",
+    "                  metrics=['msd','hd95','dice'])\n",
+    "\n",
+    "ctvi_jac_msd = {}\n",
+    "ctvi_jac_msd['high'] = jac_metrics[0]['msd'][0]\n",
+    "ctvi_jac_msd['medium'] = jac_metrics[0]['msd'][1]\n",
+    "ctvi_jac_msd['low'] = jac_metrics[0]['msd'][2]\n",
     "\n",
     "ctvi_jac_hd95 = {}\n",
     "ctvi_jac_hd95['high'] = jac_metrics[0]['hd95'][0]\n",
     "ctvi_jac_hd95['medium'] = jac_metrics[0]['hd95'][1]\n",
-    "ctvi_jac_hd95['low'] = jac_metrics[0]['hd95'][2]"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "e828e41a-150e-4fae-bb8e-f455cf5677ea",
-   "metadata": {},
-   "source": [
-    "ctvi_jac_hd95 = {}\n",
+    "ctvi_jac_hd95['low'] = jac_metrics[0]['hd95'][2]\n",
     "\n",
-    "ctvi_jac_hd95['high'] = hausdorff_distance(np.where((label_img==1), True , False), np.where((ctvi_jac_label_arr==1), True , False))\n",
-    "ctvi_jac_hd95['medium'] = hausdorff_distance(np.where((label_img==2), True , False), np.where((ctvi_jac_label_arr==2), True , False))\n",
-    "ctvi_jac_hd95['low'] = hausdorff_distance(np.where((label_img==3), True , False), np.where((ctvi_jac_label_arr==3), True , False))"
+    "ctvi_jac_dice = {}\n",
+    "ctvi_jac_dice['high'] = jac_metrics[0]['dice'][0]\n",
+    "ctvi_jac_dice['medium'] = jac_metrics[0]['dice'][1]\n",
+    "ctvi_jac_dice['low'] = jac_metrics[0]['dice'][2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "bfa6d9e9-bfa3-49dd-a2de-0bb6c0b7d6d6",
    "metadata": {},
    "outputs": [
@@ -900,6 +942,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7ae95b9d-d670-4807-93b4-85adaac33d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean surface distance (MSD)\n",
+      "high: 8\n",
+      "medium: 5\n",
+      "low: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Mean surface distance (MSD)')\n",
+    "print('high: {}'.format(round(ctvi_jac_msd['high'])))\n",
+    "print('medium: {}'.format(round(ctvi_jac_msd['medium'])))\n",
+    "print('low: {}'.format(round(ctvi_jac_msd['low'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "99c9c997-6b30-4c1b-8a5b-aefac0acb107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dice\n",
+      "high: 0.68\n",
+      "medium: 0.54\n",
+      "low: 0.65\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dice')\n",
+    "print('high: {}'.format(round(ctvi_jac_dice['high'], 2)))\n",
+    "print('medium: {}'.format(round(ctvi_jac_dice['medium'], 2)))\n",
+    "print('low: {}'.format(round(ctvi_jac_dice['low'], 2)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8bf26e3f-10b3-4ea2-9a8c-9dec6e6b2858",
    "metadata": {},
@@ -909,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "841daa89-ff89-4323-849c-ad44d672f7f7",
    "metadata": {},
    "outputs": [
@@ -936,40 +1026,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "cc3265d7-d3d9-4971-ba85-908d4bf32be1",
    "metadata": {},
    "outputs": [],
    "source": [
     "labels = [1, 2, 3]  # high, medium, low\n",
     "\n",
-    "jac_metrics = sg.write_metrics(labels=labels,\n",
+    "hu_metrics = sg.write_metrics(labels=labels,\n",
     "                  gdth_img=label_img,\n",
     "                  pred_img=ctvi_hu_label_arr,\n",
     "                  csv_file=None,\n",
-    "                  metrics=['vs','hd','hd95'])\n",
+    "                  metrics=['msd','hd95','dice'])\n",
     "\n",
     "ctvi_hu_hd95 = {}\n",
-    "ctvi_hu_hd95['high'] = jac_metrics[0]['hd95'][0]\n",
-    "ctvi_hu_hd95['medium'] = jac_metrics[0]['hd95'][1]\n",
-    "ctvi_hu_hd95['low'] = jac_metrics[0]['hd95'][2]"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "daaaabc7-55d4-4e81-8f78-4f17358e241a",
-   "metadata": {},
-   "source": [
-    "ctvi_hu_hd95 = {}\n",
+    "ctvi_hu_hd95['high'] = hu_metrics[0]['hd95'][0]\n",
+    "ctvi_hu_hd95['medium'] = hu_metrics[0]['hd95'][1]\n",
+    "ctvi_hu_hd95['low'] = hu_metrics[0]['hd95'][2]\n",
     "\n",
-    "ctvi_hu_hd95['high'] = hausdorff_distance(np.where((label_img==1), True , False), np.where((ctvi_hu_label_arr==1), True , False))\n",
-    "ctvi_hu_hd95['medium'] = hausdorff_distance(np.where((label_img==2), True , False), np.where((ctvi_hu_label_arr==2), True , False))\n",
-    "ctvi_hu_hd95['low'] = hausdorff_distance(np.where((label_img==3), True , False), np.where((ctvi_hu_label_arr==3), True , False))"
+    "ctvi_hu_msd = {}\n",
+    "ctvi_hu_msd['high'] = hu_metrics[0]['msd'][0]\n",
+    "ctvi_hu_msd['medium'] = hu_metrics[0]['msd'][1]\n",
+    "ctvi_hu_msd['low'] = hu_metrics[0]['msd'][2]\n",
+    "\n",
+    "ctvi_hu_dice = {}\n",
+    "ctvi_hu_dice['high'] = hu_metrics[0]['dice'][0]\n",
+    "ctvi_hu_dice['medium'] = hu_metrics[0]['dice'][1]\n",
+    "ctvi_hu_dice['low'] = hu_metrics[0]['dice'][2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "f832456c-f304-4428-a082-c1218a8d74bc",
    "metadata": {},
    "outputs": [
@@ -992,6 +1080,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "68910be9-ea63-47f2-9142-52e566fb0350",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean surface distance (MSD)\n",
+      "high: 7\n",
+      "medium: 5\n",
+      "low: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Mean surface distance (MSD)')\n",
+    "print('high: {}'.format(round(ctvi_hu_msd['high'])))\n",
+    "print('medium: {}'.format(round(ctvi_hu_msd['medium'])))\n",
+    "print('low: {}'.format(round(ctvi_hu_msd['low'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7009f376-e365-43e5-b35f-e8fb09850620",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dice\n",
+      "high: 0.6\n",
+      "medium: 0.51\n",
+      "low: 0.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dice')\n",
+    "print('high: {}'.format(round(ctvi_hu_dice['high'], 2)))\n",
+    "print('medium: {}'.format(round(ctvi_hu_dice['medium'], 2)))\n",
+    "print('low: {}'.format(round(ctvi_hu_dice['low'], 2)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "070d9729-69e3-41bd-a839-6f2f5b944bf6",
    "metadata": {},
@@ -1001,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "ad68aa06-b92d-4904-bf35-2ba7d9e68527",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "71345cd4-616c-4147-bcde-c86cfd209dcb",
    "metadata": {},
    "outputs": [
@@ -1032,16 +1168,19 @@
     "    'confusion_matrix':nnunet_cm, \n",
     "    'DSC_low':np.round(nnunet_dsc['low'],2), 'DSC_medium':np.round(nnunet_dsc['medium'],2), 'DSC_high':np.round(nnunet_dsc['high'],2),\n",
     "    'HD95_low':np.round(nnunet_hd95['low'],2), 'HD95_medium':np.round(nnunet_hd95['medium'],2), 'HD95_high':np.round(nnunet_hd95['high'],2),\n",
+    "    'MSD_low':np.round(nnunet_msd['low'],2), 'MSD_medium':np.round(nnunet_msd['medium'],2), 'MSD_high':np.round(nnunet_msd['high'],2),\n",
     "}\n",
     "ctvi_jac_d = {\n",
     "    'confusion_matrix':ctvi_jac_cm, \n",
     "    'DSC_low':np.round(ctvi_jac_dsc['low'],2), 'DSC_medium':np.round(ctvi_jac_dsc['medium'],2), 'DSC_high':np.round(ctvi_jac_dsc['high'],2),\n",
     "    'HD95_low':np.round(ctvi_jac_hd95['low'],2), 'HD95_medium':np.round(ctvi_jac_hd95['medium'],2), 'HD95_high':np.round(ctvi_jac_hd95['high'],2),\n",
+    "    'MSD_low':np.round(ctvi_jac_msd['low'],2), 'MSD_medium':np.round(ctvi_jac_msd['medium'],2), 'MSD_high':np.round(ctvi_jac_msd['high'],2),\n",
     "}\n",
     "ctvi_hu_d = {\n",
     "    'confusion_matrix':ctvi_hu_cm, \n",
     "    'DSC_low':np.round(ctvi_hu_dsc['low'],2), 'DSC_medium':np.round(ctvi_hu_dsc['medium'],2), 'DSC_high':np.round(ctvi_hu_dsc['high'],2),\n",
     "    'HD95_low':np.round(ctvi_hu_hd95['low'],2), 'HD95_medium':np.round(ctvi_hu_hd95['medium'],2), 'HD95_high':np.round(ctvi_hu_hd95['high'],2),\n",
+    "    'MSD_low':np.round(ctvi_jac_msd['low'],2), 'MSD_medium':np.round(ctvi_jac_msd['medium'],2), 'MSD_high':np.round(ctvi_jac_msd['high'],2),\n",
     "}\n",
     "patient_d = {\n",
     "    'dataset_id':DATASET_ID, \n",
