--- a/compare patient nnunet predictions with quantised PET and CTVI-DIR.ipynb
+++ b/compare patient nnunet predictions with quantised PET and CTVI-DIR.ipynb
@@ -1180,7 +1180,7 @@
     "    'confusion_matrix':ctvi_hu_cm, \n",
     "    'DSC_low':np.round(ctvi_hu_dsc['low'],2), 'DSC_medium':np.round(ctvi_hu_dsc['medium'],2), 'DSC_high':np.round(ctvi_hu_dsc['high'],2),\n",
     "    'HD95_low':np.round(ctvi_hu_hd95['low'],2), 'HD95_medium':np.round(ctvi_hu_hd95['medium'],2), 'HD95_high':np.round(ctvi_hu_hd95['high'],2),\n",
-    "    'MSD_low':np.round(ctvi_jac_msd['low'],2), 'MSD_medium':np.round(ctvi_jac_msd['medium'],2), 'MSD_high':np.round(ctvi_jac_msd['high'],2),\n",
+    "    'MSD_low':np.round(ctvi_hu_msd['low'],2), 'MSD_medium':np.round(ctvi_hu_msd['medium'],2), 'MSD_high':np.round(ctvi_hu_msd['high'],2),\n",
     "}\n",
     "patient_d = {\n",
     "    'dataset_id':DATASET_ID, \n",
