--- a/compare all nnunet predictions with quantised PET and CTVI-DIR.ipynb
+++ b/compare all nnunet predictions with quantised PET and CTVI-DIR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "id": "f8e57a45-e7a3-44ca-8ad6-a3346c091fcb",
    "metadata": {
     "editable": true,
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "ad68aa06-b92d-4904-bf35-2ba7d9e68527",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "71345cd4-616c-4147-bcde-c86cfd209dcb",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "id": "d2036cfe-4fcb-4799-9e93-e3ae9362ce62",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 32,
    "id": "720edaba-84e0-4ef6-9100-52551332a973",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "id": "c12e2832-6640-41e2-aae3-d3d009d4e74b",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "id": "52aa81b1-8512-465b-89f6-dd4cba78a607",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "id": "ce91f0cd-d557-4b58-8bd0-c871fa0593c7",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "id": "15a9b31e-9cf0-4031-b1d3-aa3b1fbc12cf",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "id": "884ade10-4ba0-4ea9-81bc-77d1843ee09d",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "id": "d7aa521b-4c9d-418f-8fcb-42af305dd8d6",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "id": "a15a8c1a-a877-47d7-bd2c-bed4904a15ff",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "id": "e9f7f658-677e-464c-a721-3aa31bbcc5b5",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "id": "952a09d7-371b-4bf1-a18b-92c3c9c9a0df",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "id": "b932d693-d5ea-442a-a3ef-8997a9b37350",
    "metadata": {},
    "outputs": [],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "id": "536a1606-de83-483a-bad7-ee6ce029f213",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "id": "b856a848-63da-46e1-8bec-c7f76fe0e469",
    "metadata": {},
    "outputs": [],
@@ -573,8 +573,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "a2ea7e79-edb5-45e0-98dd-9e051421da6d",
+   "execution_count": 45,
+   "id": "da83643e-e7cc-4365-bbdb-6598c6f5c3d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{:0.0f}'.format(32.234567))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "dcf82c03-37f5-42c4-b375-e81f3705e0fb",
    "metadata": {},
    "outputs": [
     {
@@ -582,24 +600,24 @@
      "output_type": "stream",
      "text": [
       "high-function HD95 mean (range)\n",
-      "nnU-Net        32.62 (15.07 to 47.46)\n",
-      "nnU-Net-2D     31.75 (16.40 to 74.73)\n",
-      "Jac            33.40 (22.72 to 62.83)\n",
-      "HU             32.01 (24.04 to 51.92)\n"
+      "nnU-Net        32.6 (15.1 to 47.5)\n",
+      "nnU-Net-2D     31.7 (16.4 to 74.7)\n",
+      "Jac            33.4 (22.7 to 62.8)\n",
+      "HU             32.0 (24.0 to 51.9)\n"
      ]
     }
    ],
    "source": [
     "print('high-function HD95 mean (range)')\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('nnU-Net', np.mean(boxplot_nnunet[0]), np.min(boxplot_nnunet[0]), np.max(boxplot_nnunet[0])))\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('nnU-Net-2D', np.mean(boxplot_nnunet_2d[0]), np.min(boxplot_nnunet_2d[0]), np.max(boxplot_nnunet_2d[0])))\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('Jac', np.mean(boxplot_jac[0]), np.min(boxplot_jac[0]), np.max(boxplot_jac[0])))\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('HU', np.mean(boxplot_hu[0]), np.min(boxplot_hu[0]), np.max(boxplot_hu[0])))"
+    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('nnU-Net', np.mean(boxplot_nnunet[0]), np.min(boxplot_nnunet[0]), np.max(boxplot_nnunet[0])))\n",
+    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('nnU-Net-2D', np.mean(boxplot_nnunet_2d[0]), np.min(boxplot_nnunet_2d[0]), np.max(boxplot_nnunet_2d[0])))\n",
+    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('Jac', np.mean(boxplot_jac[0]), np.min(boxplot_jac[0]), np.max(boxplot_jac[0])))\n",
+    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('HU', np.mean(boxplot_hu[0]), np.min(boxplot_hu[0]), np.max(boxplot_hu[0])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "id": "e2a50746-5fba-41ce-9303-06d3ef9f1ff1",
    "metadata": {},
    "outputs": [],
@@ -609,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "id": "220d4971-b241-41d2-8552-931093d0cb13",
    "metadata": {},
    "outputs": [],
@@ -624,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "id": "71a442bb-d4ce-4cad-8c3f-9319b99096a5",
    "metadata": {},
    "outputs": [
@@ -720,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "id": "c7545a72-81b2-4e4f-b7f1-d366383c4a41",
    "metadata": {},
    "outputs": [],
@@ -748,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "id": "21e36495-7a4d-4aed-8c9a-712869981211",
    "metadata": {},
    "outputs": [
@@ -774,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 52,
    "id": "aa9038f2-bb41-4450-8d40-2ab8cd312921",
    "metadata": {},
    "outputs": [],
@@ -784,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 53,
    "id": "cfeb1cd9-4d52-414a-8f7c-d486fccacf47",
    "metadata": {},
    "outputs": [],
@@ -799,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 54,
    "id": "716d9e36-50ff-4d79-92e3-bae2f19ff829",
    "metadata": {},
    "outputs": [
