--- a/compare all nnunet predictions with quantised PET and CTVI-DIR.ipynb
+++ b/compare all nnunet predictions with quantised PET and CTVI-DIR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "f8e57a45-e7a3-44ca-8ad6-a3346c091fcb",
    "metadata": {
     "editable": true,
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "ad68aa06-b92d-4904-bf35-2ba7d9e68527",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "71345cd4-616c-4147-bcde-c86cfd209dcb",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "d2036cfe-4fcb-4799-9e93-e3ae9362ce62",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "720edaba-84e0-4ef6-9100-52551332a973",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "c12e2832-6640-41e2-aae3-d3d009d4e74b",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "52aa81b1-8512-465b-89f6-dd4cba78a607",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "ce91f0cd-d557-4b58-8bd0-c871fa0593c7",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "15a9b31e-9cf0-4031-b1d3-aa3b1fbc12cf",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "884ade10-4ba0-4ea9-81bc-77d1843ee09d",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "d7aa521b-4c9d-418f-8fcb-42af305dd8d6",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "a15a8c1a-a877-47d7-bd2c-bed4904a15ff",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "e9f7f658-677e-464c-a721-3aa31bbcc5b5",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "952a09d7-371b-4bf1-a18b-92c3c9c9a0df",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "b932d693-d5ea-442a-a3ef-8997a9b37350",
    "metadata": {},
    "outputs": [],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "536a1606-de83-483a-bad7-ee6ce029f213",
    "metadata": {},
    "outputs": [
@@ -473,6 +473,15 @@
       "ctvi_hu, low: None\n",
       "\n",
       "saved figure to /home/daryl/figures/ctvi-nnunet-jac-hu-DSC-boxplot.svg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/daryl/miniconda3/envs/py310/lib/python3.10/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.3, the latest is 0.5.4.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
      ]
     },
     {
@@ -545,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "b856a848-63da-46e1-8bec-c7f76fe0e469",
    "metadata": {},
    "outputs": [],
@@ -573,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "da83643e-e7cc-4365-bbdb-6598c6f5c3d4",
    "metadata": {},
    "outputs": [
@@ -591,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "dcf82c03-37f5-42c4-b375-e81f3705e0fb",
    "metadata": {},
    "outputs": [
@@ -617,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "e2a50746-5fba-41ce-9303-06d3ef9f1ff1",
    "metadata": {},
    "outputs": [],
@@ -627,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "220d4971-b241-41d2-8552-931093d0cb13",
    "metadata": {},
    "outputs": [],
@@ -642,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "71a442bb-d4ce-4cad-8c3f-9319b99096a5",
    "metadata": {},
    "outputs": [
@@ -738,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "c7545a72-81b2-4e4f-b7f1-d366383c4a41",
    "metadata": {},
    "outputs": [],
@@ -766,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "21e36495-7a4d-4aed-8c9a-712869981211",
    "metadata": {},
    "outputs": [
@@ -792,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "aa9038f2-bb41-4450-8d40-2ab8cd312921",
    "metadata": {},
    "outputs": [],
@@ -802,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "cfeb1cd9-4d52-414a-8f7c-d486fccacf47",
    "metadata": {},
    "outputs": [],
@@ -817,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "716d9e36-50ff-4d79-92e3-bae2f19ff829",
    "metadata": {},
    "outputs": [
