--- a/compare patient nnunet predictions with quantised PET and CTVI-DIR.ipynb
+++ b/compare patient nnunet predictions with quantised PET and CTVI-DIR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f8e57a45-e7a3-44ca-8ad6-a3346c091fcb",
    "metadata": {
     "editable": true,
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "275992c0-6b0a-4a45-908d-e7b97404e58b",
    "metadata": {
     "editable": true,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "239a1818-fc69-437f-9a2f-730614da8630",
    "metadata": {
     "editable": true,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "924542f1-56e1-4939-85b8-0dca5f61be62",
    "metadata": {
     "editable": true,
@@ -85,12 +85,21 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/daryl/miniconda3/envs/py310/lib/python3.10/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.3, the latest is 0.5.4.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "(320, 320, 300)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "fa7f9b65-7507-4af7-b278-1dfdb0fe7b99",
    "metadata": {},
    "outputs": [
@@ -115,7 +124,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d3f44379-b101-4790-a3cb-a0f01ba3902b",
    "metadata": {},
    "outputs": [
@@ -136,7 +145,7 @@
        "(320, 320, 300)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "f920c556-e99c-4baa-bbf4-94529c2986e5",
    "metadata": {},
    "outputs": [],
@@ -158,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "aff163b3-e44a-41d8-871d-61d2e257f2f1",
    "metadata": {},
    "outputs": [],
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "d6fbc3b1-f9e4-492c-b252-069deaee4e8e",
    "metadata": {},
    "outputs": [
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ef92f405-7f12-496c-b55d-2ed6a71f0ea5",
    "metadata": {},
    "outputs": [],
@@ -225,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e853c418-f36f-48a9-8c1c-ffbe2b79087c",
    "metadata": {},
    "outputs": [],
@@ -236,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "598dc0b1-3f59-42ea-921e-4097bb51e8cb",
    "metadata": {},
    "outputs": [],
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "19cb77fa-52e9-4e8d-9d3d-8e2a2be00a57",
    "metadata": {},
    "outputs": [],
@@ -268,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "862f7ecc-84e5-48a8-8a9b-bddd1e19c854",
    "metadata": {},
    "outputs": [
@@ -276,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved figure to /home/daryl/figures/confusion-matrix-ctvi-nnunet-dataset-160-test-00.svg\n"
+      "saved figure to /home/daryl/figures/confusion-matrix-ctvi-nnunet-dataset-160-test-00\n"
      ]
     },
     {
@@ -302,8 +311,9 @@
     "    plt.title(r'CTVI$_\\text{nnU-Net-2D}$')\n",
     "plt.gca().xaxis.label.set_visible(False)\n",
     "plt.gca().yaxis.label.set_visible(False)\n",
-    "fig_filename = '{}/figures/confusion-matrix-ctvi-nnunet{}-dataset-{:03d}-test-{:02d}.svg'.format(expanduser('~'), MODEL_CONFIG_SUFFIX.replace('/','-'), DATASET_ID, TEST_ID)\n",
-    "plt.savefig(fig_filename, format='svg', dpi=600, bbox_inches='tight')\n",
+    "fig_filename = '{}/figures/confusion-matrix-ctvi-nnunet{}-dataset-{:03d}-test-{:02d}'.format(expanduser('~'), MODEL_CONFIG_SUFFIX.replace('/','-'), DATASET_ID, TEST_ID)\n",
+    "plt.savefig(fig_filename+'.svg', format='svg', dpi=600, bbox_inches='tight')\n",
+    "plt.savefig(fig_filename+'.png', format='png', dpi=600, bbox_inches='tight')\n",
     "print('saved figure to {}'.format(fig_filename))"
    ]
   },
@@ -706,8 +716,9 @@
     "plt.title(r'CTVI$_\\text{Jac}$')\n",
     "plt.gca().xaxis.label.set_visible(False)\n",
     "plt.gca().yaxis.label.set_visible(False)\n",
-    "fig_filename = '{}/figures/confusion-matrix-ctvi-jac-dataset-{:03d}-test-{:02d}.svg'.format(expanduser('~'), DATASET_ID, TEST_ID)\n",
-    "plt.savefig(fig_filename, format='svg', dpi=600, bbox_inches='tight')\n",
+    "fig_filename = '{}/figures/confusion-matrix-ctvi-jac-dataset-{:03d}-test-{:02d}'.format(expanduser('~'), DATASET_ID, TEST_ID)\n",
+    "plt.savefig(fig_filename+'.svg', format='svg', dpi=600, bbox_inches='tight')\n",
+    "plt.savefig(fig_filename+'.png', format='png', dpi=600, bbox_inches='tight')\n",
     "print('saved figure to {}'.format(fig_filename))"
    ]
   },
@@ -753,8 +764,9 @@
     "plt.gca().xaxis.label.set_visible(False)\n",
     "plt.gca().yaxis.label.set_visible(False)\n",
     "plt.gca().set_visible(False)\n",
-    "fig_filename = '{}/figures/confusion-matrix-colorbar.svg'.format(expanduser('~'))\n",
-    "plt.savefig(fig_filename, format='svg', dpi=600, bbox_inches='tight')\n",
+    "fig_filename = '{}/figures/confusion-matrix-colorbar'.format(expanduser('~'))\n",
+    "plt.savefig(fig_filename+'.svg', format='svg', dpi=600, bbox_inches='tight')\n",
+    "plt.savefig(fig_filename+'.png', format='png', dpi=600, bbox_inches='tight')\n",
     "print('saved figure to {}'.format(fig_filename))"
    ]
   },
@@ -854,8 +866,9 @@
     "plt.title(r'CTVI$_\\text{HU}$')\n",
     "plt.gca().xaxis.label.set_visible(False)\n",
     "plt.gca().yaxis.label.set_visible(False)\n",
-    "fig_filename = '{}/figures/confusion-matrix-ctvi-hu-dataset-{:03d}-test-{:02d}.svg'.format(expanduser('~'), DATASET_ID, TEST_ID)\n",
-    "plt.savefig(fig_filename, format='svg', dpi=600, bbox_inches='tight')\n",
+    "fig_filename = '{}/figures/confusion-matrix-ctvi-hu-dataset-{:03d}-test-{:02d}'.format(expanduser('~'), DATASET_ID, TEST_ID)\n",
+    "plt.savefig(fig_filename+'.svg', format='svg', dpi=600, bbox_inches='tight')\n",
+    "plt.savefig(fig_filename+'.png', format='png', dpi=600, bbox_inches='tight')\n",
     "print('saved figure to {}'.format(fig_filename))"
    ]
   },
